Fixed spacing issues with alert/notice

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,6 @@
 
  @import "materialize";
 
-
  .nav-wrapper {
    background-color: black;
 }
@@ -26,4 +25,8 @@
   height: 45px;
   width: auto;
   margin: 10px;
+}
+
+.alert, .notice {
+    display: none;
 }
